--- a/style.css
+++ b/style.css
@@ -38,6 +38,17 @@ body{
     border: none;
     cursor: pointer;
 }
+.result{
+    background-color: white;
+    height: 90%;
+    width: 65%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    margin-bottom: 25px;
+
+}
 .container .flag-img{
     display: block;
     width: 45%;
@@ -49,6 +60,9 @@ body{
     text-transform: uppercase;
     letter-spacing: 1px;
     margin-bottom: 1.8em;
+}
+.wrapper{
+    margin-left: 20px;
 }
 .data-wrapper{
     margin-bottom:1em ;
